# audio-bookmark

./: .env  README.md  config.html  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.css  App.tsx  ConfigElm.tsx  all_audio_info_hook.ts  audio_type.ts  config.tsx  custom-titlebar.ts  notify_from_back.ts  notify_from_back_type.ts  profiles_hook.ts  query.ts  style.css  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_backend.rs  device_changer.rs  errors.rs  lib.rs  main.rs  menu.rs  notifier.rs  systray.rs
src-tauri/src/audio_api/: device_changer.rs  mod.rs  notifier.rs
src/components/: All.tsx  AudioCard.tsx  EditAudioModal.tsx  EditProfileAudioCard.tsx  EditProfileAudios.tsx  InvalidProfileNameSnackbar.tsx  InvalidSnackbars.tsx  Main.tsx  ProfileAudioCard.tsx  ProfileAudios.tsx  ProfileRemoveDialog.tsx  ProfileTab.tsx  SliderPart.tsx  StartUpSwitch.tsx  notification.ts
