[package]
name = "audio-bookmark"
version = "0.1.0"
description = "A Tauri App"
authors = ["namnium"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["app-all", "fs-all", "global-shortcut-all", "notification-all", "path-all", "process-exit", "system-tray", "window-all"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
log = "0.4.17"
env_logger = "0.9.1"
dotenv = "0.15.0"
once_cell = "1.15.0"
tokio = { version = "1.21.2", features = ["full"] }
if_chain = "1.0.2"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "implement",
    "interface",
]

[dependencies.tauri-plugin-autostart]
git = "https://github.com/tauri-apps/tauri-plugin-autostart"
rev = "031efac82d592774c986e94c6258a3dc11f54d81"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
